# rust-cpp-opencv-interop

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  vcpkg.json
.cargo/: config.toml
include/: example.h  opencv_ffi.h
src/: example.cpp  lib.rs  main.cpp  main.rs  opencv_ffi.cpp  opencv_ffi.rs
